# omoide

./: .env.sample  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum  main.go
src/: main.rs
