[package]
name = "omoide"
version = "0.1.0"
authors = ["Makoto Hiramatsu <himkt@cookpad.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = { version = "0.15", git = "https://github.com/egg-mode-rs/egg-mode" }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
